@@ -1,3 +1,8 @@
+2019-03-07  Mark Wielaard  <mark@klomp.org>
+
+	* elf32_updatefile.c (updatemmap): Use posix_memalign instead of
+	aligned_alloc.
+
 2019-03-06  Mark Wielaard  <mark@klomp.org>
 
 	* elf32_updatefile.c (updatemmap): Free scns before returning
